[package]
name = "supamarker"
version = "1.2.0"
edition = "2024"
authors = ["Hassan Qasemi"]
description = "A simple CLI tool to upload and delete files to and from your Supabase project"
license = "MIT"
homepage = "https://github.com/rivethorn/supamarker"
repository = "https://github.com/rivethorn/supamarker"
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "06FB64A3-F98C-47AB-88AD-58D745424AC3"
path-guid = "32EA9495-DDEA-4158-A5BF-E5B3CFB41B1C"
license = false
eula = false


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.25", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
slug = "0.1.6"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
zenity = "3.6.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
